# game-soul

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pom.xml
backend/database/init/: 01-initial-data.cypher
backend/src/main/java/com/gamesoul/: GameSoulApplication.java
backend/src/main/java/com/gamesoul/config/: CorsConfig.java  Neo4jConfig.java
backend/src/main/java/com/gamesoul/controller/: RecommendationController.java  TestController.java
backend/src/main/java/com/gamesoul/model/dto/: GameRecommendation.java  QuestionnaireRequest.java  UserProfile.java
backend/src/main/java/com/gamesoul/service/: EmotionAnalysisService.java  RecommendationService.java  UserService.java
backend/src/main/resources/: application.yml
database/: setup.ps1  setup.sh
database/admin/: add-characteristic.cypher  add-game.cypher  add-genre.cypher
database/data/: initial-data.cypher
database/maintenance/: maintain-resonance.cypher
database/queries/: create-update-game.cypher  exploration-query.cypher  get-characteristics.cypher  get-duration-ranges.cypher  get-genres.cypher  resonance-query.cypher  update-resonance.cypher
database/schema/: constraints.cypher
database/setup/: schema.cypher
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/common/: Button.jsx  Layout.jsx  PixelGhost.jsx
frontend/src/components/landing/: LandingPage.jsx
frontend/src/components/questionnaire/: QuestionnairePage.jsx
frontend/src/components/register/: RegisterPage.jsx
frontend/src/components/results/: ResultsPage.jsx
frontend/src/styles/: globals.css
game-soul-backend/: Cargo.toml  Dockerfile
game-soul-backend/src/: config.rs  error.rs  main.rs  routes.rs  routes.rs.test_route
game-soul-backend/src/db/neo4j/: client.rs
game-soul-backend/src/db/neo4j/queries/: minimal_recommendations.rs  mod.rs  recommendations.rs  reference.rs  simple_recommendations.rs  user.rs
game-soul-backend/src/handlers/: data_diagnosis.rs  diagnostics.rs  mod.rs  questionnaire.rs  recommendation.rs  recommendation.rs.test_endpoint  reference.rs  user.rs
game-soul-backend/src/middleware/: cors.rs  metrics.rs  mod.rs
game-soul-backend/src/models/: emotion.rs  mod.rs  questionnaire.rs  recommendation.rs  user.rs
game-soul-backend/src/services/: mod.rs  recommendation.rs
game-soul-backend/src/utils/: helpers.rs
