[package]
name = "game-soul-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"         # Framework web
actix-cors = "0.7.1"         # Soporte para CORS (actualizado)
serde = { version = "1.0", features = ["derive"] } # Serialización/deserialización
serde_json = "1.0"           # Manejo de JSON
dotenv = "0.15.0"            # Cargar variables de entorno
env_logger = "0.11.8"        # Logging (actualizado)
log = "0.4"                  # Macros de logging
neo4rs = "0.8.0"             # Cliente de Neo4j para Rust (actualizado)
tokio = { version = "1", features = ["full"] } # Runtime asíncrono
anyhow = "1.0"               # Manejo de errores
thiserror = "2.0.12"         # Definición de errores personalizados (actualizado)
config = "0.15.11"           # Configuración (actualizado)